<resources>
    <string name="app_name">Aplicacao1404</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="button">Button</string>
    <string name="MensagemRecebida">Mensagem Recebida</string>
    <string name="nome_vazio">Nome Vazio</string>
    <string name="email_vazio">Email Vazio</string>
    <string name="telefone_vazio">Telefone Vazio</string>
    <string name="altura_vazio">Altura Vazio</string>
    <string name="peso_vazio">Peso Vazio</string>
</resources>